src/public/widget.css
/* Widget */
body {
  background-color: transparent;
}

.widget {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  height: 100vh;
}

.widget__chat-wrapper {
  border-radius: .75rem;
  box-shadow: var(--shadow);
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  max-height: 500px;
  overflow: hidden;
  position: relative;
  transition: max-height 0s, opacity .5s linear;
}

.widget__chat-wrapper:not(.show) {
  display: none;
  max-height: 0;
  opacity: 0;
  transition: max-height 0s .5s, opacity .5s linear;
}

.widget__chat {
  background-color: #757575;
}

.widget__close-btn {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 1.5rem;
  padding: 0;
  position: absolute;
  right: .5rem;
  top: .5rem;
}

.widget__toggle-btn {
  align-self: end;
  background-color: #543927;
  border: 0;
  border-radius: 50%;
  cursor: pointer;
  height: 4rem;
  margin-top: auto;
  padding: .7rem;
  width: 4rem;
}

.widget__toggle-btn__img {
  display: block;
  width: 100%;
}

